crates/bevy_reflect/compile_fail/tests/reflect_remote/invalid_definition_fail.stderr
error[E0308]: `?` operator has incompatible types
  --> tests/reflect_remote/invalid_definition_fail.rs:LL:CC
   |
LL |     #[reflect_remote(external_crate::TheirStruct)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `u32`, found `bool`
   |
   = note: `?` operator cannot convert from `bool` to `u32`
   = note: this error originates in the attribute macro `reflect_remote` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/reflect_remote/invalid_definition_fail.rs:LL:CC
   |
LL |     #[reflect_remote(external_crate::TheirStruct)]
   |     ----------------------------------------------
   |     |
   |     expected due to the type of this binding
   |     in this procedural macro expansion
...
LL |         pub value: bool,
   |                    ^^^^ expected `u32`, found `bool`
   |
   = note: this error originates in the attribute macro `reflect_remote` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: `?` operator has incompatible types
  --> tests/reflect_remote/invalid_definition_fail.rs:LL:CC
   |
LL |     #[reflect_remote(external_crate::TheirStruct)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `u32`, found `bool`
   |
   = note: `?` operator cannot convert from `bool` to `u32`
   = note: this error originates in the attribute macro `reflect_remote` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/reflect_remote/invalid_definition_fail.rs:LL:CC
   |
LL |     #[reflect_remote(external_crate::TheirStruct)]
   |     ----------------------------------------------
   |     |
   |     expected due to the type of this binding
   |     in this procedural macro expansion
...
LL |         pub bool,
   |             ^^^^ expected `u32`, found `bool`
   |
   = note: this error originates in the attribute macro `reflect_remote` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0026]: variant `enums::external_crate::TheirStruct::Unit` does not have a field named `0`
  --> tests/reflect_remote/invalid_definition_fail.rs:LL:CC
   |
LL |     #[reflect_remote(external_crate::TheirStruct)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ variant `enums::external_crate::TheirStruct::Unit` does not have this field
   |
   = note: this error originates in the attribute macro `reflect_remote` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0559]: variant `enums::external_crate::TheirStruct::Unit` has no field named `0`
  --> tests/reflect_remote/invalid_definition_fail.rs:LL:CC
   |
LL |     #[reflect_remote(external_crate::TheirStruct)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `enums::external_crate::TheirStruct::Unit` does not have this field
   |
   = note: all struct fields are already assigned
   = note: this error originates in the attribute macro `reflect_remote` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: `?` operator has incompatible types
  --> tests/reflect_remote/invalid_definition_fail.rs:LL:CC
   |
LL |     #[reflect_remote(external_crate::TheirStruct)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `u32`, found `bool`
   |
   = note: `?` operator cannot convert from `bool` to `u32`
   = note: this error originates in the attribute macro `reflect_remote` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: `?` operator has incompatible types
  --> tests/reflect_remote/invalid_definition_fail.rs:LL:CC
   |
LL |     #[reflect_remote(external_crate::TheirStruct)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `usize`, found `String`
   |
   = note: `?` operator cannot convert from `std::string::String` to `usize`
   = note: this error originates in the attribute macro `reflect_remote` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/reflect_remote/invalid_definition_fail.rs:LL:CC
   |
LL |       #[reflect_remote(external_crate::TheirStruct)]
   |       ----------------------------------------------
   |       |
   |  _____in this procedural macro expansion
   | |
...  |
LL | |         Tuple(bool),
   | |               ^^^-
   | |_______________|__|
   |                 |  expected due to the type of this binding
   |                 expected `u32`, found `bool`
   |
   = note: this error originates in the attribute macro `reflect_remote` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/reflect_remote/invalid_definition_fail.rs:LL:CC
   |
LL |     #[reflect_remote(external_crate::TheirStruct)]
   |     ---------------------------------------------- in this procedural macro expansion
...
LL |         Struct { value: String },
   |                         ^^^^^^
   |                         |
   |                         expected `usize`, found `String`
   |                         expected due to the type of this binding
   |
   = note: this error originates in the attribute macro `reflect_remote` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 10 previous errors

Some errors have detailed explanations: E0026, E0308, E0559.
For more information about an error, try `rustc --explain E0026`.
